--- a/css/card.css
+++ b/css/card.css
@@ -1,8 +1,6 @@
-#card1,
-#card2
+#card
 {
     --size: 100%;
-    margin-left: .25vw;
     margin-top: 0.4em;
     display: flex;
     flex-direction: row;
@@ -10,22 +8,25 @@
 }
 .mainCardButton
 {
-    background: var(--blueU);
-    border: .3em solid var(--oxford-blue);
+    background: var(--dark-purple);
+    border: .3em solid var(--pale-green);
+    color: var(--pale-green);
     font-size: 2.25ch;
     font-weight: bold;
     margin-left: 3%;
+    width: 30%;
 }
 .mainCardButton:hover
 {
-    background: var(--resolution-blue);
-    border: .3em solid var(--blueU);
-    color: var(--lavender-web);
+    
+    background: var(--pale-purple);
+    border: .3em solid var(--whitish);
+    color: #F2F2F2;
 }
 .mainCardImage
 {
-    background: var(--cornflower-blue);
-    border-bottom: 9pt double var(--cornflower-blue);
+    background: #9a99bf;
+    border-bottom: 9pt double #F2F2F2;
     width: 100%;
 }
 .mainCardImage img
@@ -34,7 +35,8 @@
 }
 .mainCardTitle
 {
-    border-bottom: 9pt double var(--cornflower-blue);
+    background: #a9d9be;
+    border-bottom: 9pt double #F2F2F2;
     color: #141259;
     font-size: 24px;
     font-weight: 700;
@@ -43,17 +45,16 @@
 }
 .mainCardTitle a
 {
-    color: var(--lavender-web);
+    color: #141259;
     text-decoration: none;
 }
 .mainCardTitle a:hover
 {
-    color: var(--electric-blue);
+    color: #9a99bf;
 }
 .mainCardPrice
 {
-    border-bottom: 9pt double var(--cornflower-blue);
-    color: var(--lavender-web);
+    border-bottom: 9pt double black;
     font-size: 1.2em;
     font-weight: 700;
     line-height: 190%;
@@ -70,17 +71,24 @@
     margin-right: 0.25em;
     text-align:justify;
 }
-.mainCardSettings
+article
 {
-    background: var(--blue-ryb);
-    border: .15em solid var(--cornflower-blue);
-    box-sizing: border-box;
+    background: #a9d9be;
+    border: .2em solid #141259;
     text-justify: center;
+    margin: auto;
 }
-#card1 article img,
-#card2 article img
+article img
 {
     width: 100%;
+}
+
+@media all and (min-width: 576px)
+{
+    .mainCardSettings
+    {
+        width: calc((var(--size) / 2) - .1em);
+    }
 }
 
 @media all and (min-width: 768px)
@@ -89,4 +97,18 @@
     {
         margin: 0.4em 1.5% 0.6em 1.5%;
     }
+    .mainCardSettings
+    {
+        margin-top: .25em;
+        width: calc((var(--size) / 3) - .25em)
+    }
+}
+
+@media all and (min-width: 992px)
+{
+    .mainCardSettings
+    {
+        margin-top: .25em;
+        width: calc((var(--size) / 4) - .15em)
+    }   
 }
