--- a/css/carrusel.css
+++ b/css/carrusel.css
@@ -1,6 +1,6 @@
 #carrusel
 {
-    --height:64vh;
+    --height: 64vh;
     height: var(--height);
 }
 #carrusel img
@@ -9,22 +9,19 @@
 }
 .carousel-control-prev
 {
-    background: var(--blueU);
-    width:4%;
+    background: var(--dark-purple);
+    width:10%;
 }
 .carousel-control-next
 {
-    background: var(--blueU);
-    width:4%;
+    background: var(--dark-purple);
+    width:10%;
 }
-.carousel-indicators
-{
-    margin-left: 0;
-}
+
 @media all and (min-width: 576px)
 {
     #carrusel
     {
-        --height: 64vh;
+        --height: 48vh;
     }
 }
