--- a/css/rating.css
+++ b/css/rating.css
@@ -10,7 +10,7 @@
     --value: 1;
     --w: calc(var(--stars) * var(--starsize));
     --x: calc(100% * (var(--value) / var(--stars)));
-    background-color: var(--blue-ryb);
+    background-color: var(--teal-blue);
     block-size: var(--starsize);
     inline-size: var(--w);
     margin: auto;
