--- a/css/search.css
+++ b/css/search.css
@@ -1,9 +1,8 @@
 .search-bar {
-  --size: 40px;
-  border: 2px solid var(--oxford-blue);
+  --size: 60px;
+  border: 2px solid var(--pale-green);
   border-radius: 100vh;
   display: flex;
-  flex-direction: row-reverse;
   height: var(--size);
   overflow: hidden;
   padding: 3px;
@@ -11,18 +10,13 @@
   transition: width 300ms ease-in-out;
   width: var(--size);
 }
-.search-bar img{
-  height: 24px;
-  vertical-align: top;
-  padding-top: 4px;
-}
 .search-bar__input {
   border: 0;
   bottom: 0;
   cursor: pointer;
   flex-grow: 1;
   font-size: 1.5rem;
-  right: 0;
+  left: 0;
   line-height: calc(var(--size) - 3px);
   opacity: 0;
   padding: 0 0.5em;
@@ -31,7 +25,6 @@
 }
 .search-bar:focus {
   outline: 0;
-  padding-top: 3px;
 }
 .search-bar__submit {
   background: transparent;
@@ -39,28 +32,23 @@
   border-radius: 50vh;
   cursor: pointer;
   font-size: 1.5rem;
-  height: calc(var(--size) - 50px);
-  margin-right: auto;
+  height: calc(var(--size) - 10px);
+  margin-left: auto;
   transition: background 150ms ease-in-out;
-  width: calc(var(--size) - 5px);
+  width: calc(var(--size) - 10px);
 }
 .search-bar:focus-within {
-  width: 45%;
-  padding-top: 10px;
+  width: 100%;
 }
 .search-bar:focus-within .search-bar__input {
-  background: var(--maximum-blue);
+  background: lightblue;
   cursor: initial;
   opacity: 1;
   width: calc(100% - var(--size));
 }
 .search-bar:focus-within .search-bar__submit {
-  color: var(--lavender-web);
-  padding: 0;
-  margin-top: -7px;
-  margin-left: 0px;
-  height: var(--size);
-  width: var(--size);
+  background: var(--dark-green);
+  color: var(--whitish);
 }
 .search-bar:focus-within .search-bar__submit:focus {
   outline: 0;
